--- a/stack_app/pubspec.yaml
+++ b/stack_app/pubspec.yaml
@@ -27,6 +27,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_bloc: ^0.11.1
+  bloc: ^0.12.0
+  pk_skeleton: ^0.0.2
+  equatable: ^0.2.3
+  http: ^0.12.0+2
 
 
 # For information on the generic Dart part of this file, see the
